# hailo_model_zoo_genai

./: CMakeLists.txt  LICENSE-3RD-PARTY.md  README.rst  test.txt  typos.toml
config/: hailo-ollama.json
docs/: CHANGELOG.rst  MODELS.rst  USAGE.rst  table1_description.rst  table2_technical.rst  table3_performance_accuracy.rst
models/manifests/deepseek_r1_distill_qwen/1.5b/: manifest.json
models/manifests/llama3.2/3b/: manifest.json
models/manifests/qwen2.5-coder/1.5b/: manifest.json
models/manifests/qwen2.5-instruct/1.5b/: manifest.json
models/manifests/qwen2.5/1.5b/: manifest.json
models/manifests/qwen2/1.5b/: manifest.json
src/: CMakeLists.txt
src/apps/server/: CMakeLists.txt  app_component.hpp  main.cpp
test/: CMakeLists.txt  controller_test.cpp  controller_test.hpp  tests.cpp
test/app/: api_test_client.hpp  test_component.hpp  test_model_store.cpp  test_model_store.hpp  test_resource_provider.cpp  test_resource_provider.hpp
utility/: to_storage.bash
yamls/: DeepSeek-R1-Distill-Qwen-1.5B.yaml  Qwen2-1.5B-Instruct.yaml  Qwen2-VL-2B-Instruct.yaml  Qwen2.5-1.5B-Instruct.yaml  Qwen2.5-Coder-1.5B-Instruct.yaml  Stable-Diffusion-1.5.yaml
